--- a/com.unity.visualeffectgraph/Shaders/ParticlePoints/PassDepth.template
+++ b/com.unity.visualeffectgraph/Shaders/ParticlePoints/PassDepth.template
@@ -15,6 +15,8 @@ Pass
 		#if USE_ALPHA_TEST || VFX_USE_ALPHA_CURRENT
 		nointerpolation float2 builtInInterpolants : TEXCOORD0;
 		#endif
+		
+		float pointSize : PSIZE;
 	};
 
 #define VFX_VARYING_PS_INPUTS ps_input
