--- a/.yamato/upm-ci-vfxmain.yml
+++ b/.yamato/upm-ci-vfxmain.yml
@@ -21,10 +21,10 @@ projects:
     folder: VisualEffectGraph
     packagename: com.unity.visualeffectgraph
 ---
-{% for project in projects %}
 {% for editor in editors %}
-{% for platform in platforms %}
 {% for testplatform in testplatforms %}
+{% for project in projects %}
+{% for platform in platforms %}
 {{ project.name }}_{{ platform.name }}_{{ testplatform.name }}_{{ editor.version }}:
   name : Build and Test {{ project.name }} on {{ platform.name }}_{{ testplatform.name }} on version {{ editor.version }}
   agent:
@@ -52,6 +52,28 @@ projects:
         - "**/upm-ci~/test-results/**/*"
         
 {% endfor %}
+# Separate block for linux, because the linux agents currently need extra configuration
+{{ project.name }}_Linux_{{ testplatform.name }}_{{ editor.version }}:
+  name : Build and Test {{ project.name }} on Linux_{{ testplatform.name }} on version {{ editor.version }}
+  agent:
+    type: Unity::VM::GPU
+    image: cds-ops/ubuntu-18.04-base:latest
+    flavor: b1.large
+  commands:
+    - sudo -H pip install --upgrade pip
+    - sudo -H pip install unity-downloader-cli --extra-index-url https://artifactory.eu-cph-1.unityops.net/api/pypi/common-python/simple
+    - sudo npm install upm-ci-utils -g --registry https://api.bintray.com/npm/unity/unity-npm
+    - git clone git@github.cds.internal.unity3d.com:unity/utr.git TestProjects/{{ project.folder }}/utr
+    - cd TestProjects/{{ project.folder }} && sudo unity-downloader-cli -b {{ editor.version }}/staging -c editor --wait --published
+    {% if testplatform.name == "Standalone" %}
+    - cd TestProjects/{{ project.folder }} && DISPLAY=:0.0 utr/utr {{ testplatform.args }}Linux64 --testproject=. --editor-location=.Editor --artifacts_path=upm-ci~/test-results
+    {% else %}
+    - cd TestProjects/{{ project.folder }} && DISPLAY=:0.0 utr/utr {{ testplatform.args }} --testproject=. --editor-location=.Editor --artifacts_path=upm-ci~/test-results
+    {% endif %}
+  artifacts:
+    logs:
+      paths:
+        - "**/upm-ci~/test-results/**/*"  
 {% endfor %}
 {% endfor %}
 
