--- a/com.unity.render-pipelines.high-definition/Editor/Material/PBR/ShaderGraph/HDPBRPass.template
+++ b/com.unity.render-pipelines.high-definition/Editor/Material/PBR/ShaderGraph/HDPBRPass.template
@@ -1,64 +1,44 @@
 Pass
 {
-    // based on HDPBRPass.template
-    Name "$splice(PassName)"
-    Tags { "LightMode" = "$splice(LightMode)" }
+    $splice(PassName)
+    Tags 
+    { 
+        $splice(LightMode)
+    }
 
-    //-------------------------------------------------------------------------------------
-    // Render Modes (Blend, Cull, ZTest, Stencil, etc)
-    //-------------------------------------------------------------------------------------
+    // Render State
     $splice(Blending)
     $splice(Culling)
     $splice(ZTest)
     $splice(ZWrite)
-    $splice(ZClip)
     $splice(Stencil)
     $splice(ColorMask)
-    //-------------------------------------------------------------------------------------
-    // End Render Modes
-    //-------------------------------------------------------------------------------------
 
     HLSLPROGRAM
-
-    #pragma target 4.5
-    #pragma only_renderers d3d11 ps4 xboxone vulkan metal switch
-    //#pragma enable_d3d11_debug_symbols
-
-    #pragma multi_compile_instancing
-    #pragma instancing_options renderinglayer
-    #pragma multi_compile _ LOD_FADE_CROSSFADE
-
-    //-------------------------------------------------------------------------------------
-    // Variant Definitions (active field translations to HDRP defines)
-    //-------------------------------------------------------------------------------------
-    $Material.SpecularColor:             #define _MATERIAL_FEATURE_SPECULAR_COLOR 1
-    $SurfaceType.Transparent:            #define _SURFACE_TYPE_TRANSPARENT 1
-    $BlendMode.Alpha:                    #define _BLENDMODE_ALPHA 1
-    $BlendMode.Add:                      #define _BLENDMODE_ADD 1
-    $BlendMode.Premultiply:              #define _BLENDMODE_PRE_MULTIPLY 1
-    $DoubleSided:                        #define _DOUBLESIDED_ON 1
-
-    //-------------------------------------------------------------------------------------
-    // End Variant Definitions
-    //-------------------------------------------------------------------------------------
-
     #pragma vertex Vert
     #pragma fragment Frag
 
-    #include "Packages/com.unity.render-pipelines.core/ShaderLibrary/Common.hlsl"
+    // Debug
+    $splice(Debug)
 
-    #include "Packages/com.unity.render-pipelines.core/ShaderLibrary/NormalSurfaceGradient.hlsl"
+    // --------------------------------------------------
+    // Pass
 
-    // define FragInputs structure
-    #include "Packages/com.unity.render-pipelines.high-definition/Runtime/RenderPipeline/ShaderPass/FragInputs.hlsl"
-    #include "Packages/com.unity.render-pipelines.high-definition/Runtime/RenderPipeline/ShaderPass/ShaderPass.cs.hlsl"
+    // Pragmas
+    $splice(PassPragmas)
 
-    //-------------------------------------------------------------------------------------
+    // Keywords
+    $splice(PassKeywords)
+    $splice(GraphKeywords)
+
     // Defines
-    //-------------------------------------------------------------------------------------
-    $splice(Defines)
-
-    // this translates the new dependency tracker into the old preprocessor definitions for the existing HDRP shader code
+    $Material.SpecularColor:                #define _MATERIAL_FEATURE_SPECULAR_COLOR 1
+    $AlphaTest:                             #define _ALPHATEST 1
+    $SurfaceType.Transparent:               #define _SURFACE_TYPE_TRANSPARENT 1
+    $BlendMode.Alpha:                       #define _BLENDMODE_ALPHA 1
+    $BlendMode.Add:                         #define _BLENDMODE_ADD 1
+    $BlendMode.Premultiply:                 #define _BLENDMODE_PRE_MULTIPLY 1
+    $DoubleSided:                           #define _DOUBLESIDED_ON 1
     $AttributesMesh.normalOS:               #define ATTRIBUTES_NEED_NORMAL
     $AttributesMesh.tangentOS:              #define ATTRIBUTES_NEED_TANGENT
     $AttributesMesh.uv0:                    #define ATTRIBUTES_NEED_TEXCOORD0
@@ -74,64 +54,63 @@ Pass
     $VaryingsMeshToPS.texCoord3:            #define VARYINGS_NEED_TEXCOORD3
     $VaryingsMeshToPS.color:                #define VARYINGS_NEED_COLOR
     $VaryingsMeshToPS.cullFace:             #define VARYINGS_NEED_CULLFACE
-    $features.modifyMesh:                   #define HAVE_MESH_MODIFICATION
+    $features.graphVertex:                  #define HAVE_MESH_MODIFICATION
+    $splice(GraphDefines)
 
-    //-------------------------------------------------------------------------------------
-    // End Defines
-    //-------------------------------------------------------------------------------------
-	$splice(DotsInstancedVars)
-
-    #include "Packages/com.unity.render-pipelines.high-definition/Runtime/ShaderLibrary/ShaderVariables.hlsl"
     #ifdef DEBUG_DISPLAY
         #include "Packages/com.unity.render-pipelines.high-definition/Runtime/Debug/DebugDisplay.hlsl"
+    #else
+        // In case of opaque we don't want to perform the alpha test, it is done in depth prepass and we use depth equal for ztest (setup from UI)
+        // Don't do it with debug display mode as it is possible there is no depth prepass in this case
+        #if !defined(_SURFACE_TYPE_TRANSPARENT) && defined(_ALPHATEST)
+            #if SHADERPASS == SHADERPASS_FORWARD
+            #define SHADERPASS_FORWARD_BYPASS_ALPHA_TEST
+            #elif SHADERPASS == SHADERPASS_GBUFFER
+            #define SHADERPASS_GBUFFER_BYPASS_ALPHA_TEST
+            #endif
+        #endif
     #endif
 
-    #include "Packages/com.unity.render-pipelines.high-definition/Runtime/Material/Material.hlsl"
+    // Includes
+    $splice(PassIncludes)
 
-#if (SHADERPASS == SHADERPASS_FORWARD)
-    #include "Packages/com.unity.render-pipelines.high-definition/Runtime/Lighting/Lighting.hlsl"
-
-    #define HAS_LIGHTLOOP
-
-    #include "Packages/com.unity.render-pipelines.high-definition/Runtime/Lighting/LightLoop/LightLoopDef.hlsl"
-    #include "Packages/com.unity.render-pipelines.high-definition/Runtime/Material/Lit/Lit.hlsl"
-    #include "Packages/com.unity.render-pipelines.high-definition/Runtime/Lighting/LightLoop/LightLoop.hlsl"
-#else
-    #include "Packages/com.unity.render-pipelines.high-definition/Runtime/Material/Lit/Lit.hlsl"
-#endif
-
-    #include "Packages/com.unity.render-pipelines.high-definition/Runtime/Material/BuiltinUtilities.hlsl"
-    #include "Packages/com.unity.render-pipelines.high-definition/Runtime/Material/MaterialUtilities.hlsl"
-    #include "Packages/com.unity.render-pipelines.high-definition/Runtime/Material/Decal/DecalUtilities.hlsl"
-    #include "Packages/com.unity.render-pipelines.high-definition/Runtime/Material/Lit/LitDecalData.hlsl"
-    #include "Packages/com.unity.render-pipelines.high-definition/Runtime/ShaderLibrary/ShaderGraphFunctions.hlsl"
-
-    //Used by SceneSelectionPass
+    // Used by SceneSelectionPass
     int _ObjectId;
     int _PassValue;
 
-    //-------------------------------------------------------------------------------------
-    // Interpolator Packing And Struct Declarations
-    //-------------------------------------------------------------------------------------
+    // --------------------------------------------------
+    // Graph
+
+    // Graph Properties
+    $splice(GraphProperties)
+    $splice(DotsInstancedProperties)
+
+    // Graph Functions
+    $splice(GraphFunctions)
+
+    // Graph Vertex
+    $splice(GraphVertex)
+    
+    // Graph Pixel
+    $splice(GraphPixel)
+
+    // --------------------------------------------------
+    // Structs and Packing
+
     $buildType(AttributesMesh)
+
     $buildType(VaryingsMeshToPS)
+
     $buildType(VaryingsMeshToDS)
-    //-------------------------------------------------------------------------------------
-    // End Interpolator Packing And Struct Declarations
-    //-------------------------------------------------------------------------------------
 
-    //-------------------------------------------------------------------------------------
-    // Graph generated code
-    //-------------------------------------------------------------------------------------
-    $splice(Graph)
-    //-------------------------------------------------------------------------------------
-    // End graph generated code
-    //-------------------------------------------------------------------------------------
+    // --------------------------------------------------
+    // Build Graph Inputs
 
-$features.modifyMesh:   $include("VertexAnimation.template.hlsl")
+    $features.graphVertex:  $include("VertexAnimation.template.hlsl")
+    $features.graphPixel:   $include("SharedCode.template.hlsl")
 
-$include("SharedCode.template.hlsl")
-
+    // --------------------------------------------------
+    // Build Surface Data
 
     void BuildSurfaceData(FragInputs fragInputs, inout SurfaceDescription surfaceDescription, float3 V, PositionInputs posInput, out SurfaceData surfaceData)
     {
@@ -148,9 +127,9 @@ $include("SharedCode.template.hlsl")
 
         // These static material feature allow compile time optimization
         surfaceData.materialFeatures = MATERIALFEATUREFLAGS_LIT_STANDARD;
-#ifdef _MATERIAL_FEATURE_SPECULAR_COLOR
+        #ifdef _MATERIAL_FEATURE_SPECULAR_COLOR
         surfaceData.materialFeatures |= MATERIALFEATUREFLAGS_LIT_SPECULAR_COLOR;
-#endif
+        #endif
 
         float3 doubleSidedConstants = float3(1.0, 1.0, 1.0);
         $DoubleSided.Flip:   doubleSidedConstants = float3(-1.0, -1.0, -1.0);
@@ -172,15 +151,15 @@ $include("SharedCode.template.hlsl")
         // If user provide bent normal then we process a better term
         surfaceData.specularOcclusion = GetSpecularOcclusionFromAmbientOcclusion(ClampNdotV(dot(surfaceData.normalWS, V)), surfaceData.ambientOcclusion, PerceptualSmoothnessToRoughness(surfaceData.perceptualSmoothness));
 
-#if HAVE_DECALS
+        #if HAVE_DECALS
         if (_EnableDecals)
         {
             DecalSurfaceData decalSurfaceData = GetDecalSurfaceData(posInput, surfaceDescription.Alpha);
             ApplyDecalToSurfaceData(decalSurfaceData, surfaceData);
         }
-#endif
+        #endif
 
-#ifdef DEBUG_DISPLAY
+        #ifdef DEBUG_DISPLAY
         if (_DebugMipMapMode != DEBUGMIPMAPMODE_NONE)
         {
             // TODO: need to update mip info
@@ -190,15 +169,15 @@ $include("SharedCode.template.hlsl")
         // We need to call ApplyDebugToSurfaceData after filling the surfarcedata and before filling builtinData
         // as it can modify attribute use for static lighting
         ApplyDebugToSurfaceData(fragInputs.tangentToWorld, surfaceData);
-#endif
+        #endif
     }
 
     void GetSurfaceAndBuiltinData(FragInputs fragInputs, float3 V, inout PositionInputs posInput, out SurfaceData surfaceData, out BuiltinData builtinData)
     {
-#ifdef LOD_FADE_CROSSFADE // enable dithering LOD transition if user select CrossFade transition in LOD group
+        #ifdef LOD_FADE_CROSSFADE // enable dithering LOD transition if user select CrossFade transition in LOD group
         uint3 fadeMaskSeed = asuint((int3)(V * _ScreenSize.xyx)); // Quantize V to _ScreenSize values
         LODDitheringTransition(fadeMaskSeed, unity_LODFade.x);
-#endif
+        #endif
 
         float3 doubleSidedConstants = float3(1.0, 1.0, 1.0);
         $DoubleSided.Flip:   doubleSidedConstants = float3(-1.0, -1.0, -1.0);
@@ -224,13 +203,10 @@ $include("SharedCode.template.hlsl")
         PostInitBuiltinData(V, posInput, surfaceData, builtinData);
     }
 
-    //-------------------------------------------------------------------------------------
-    // Pass Includes
-    //-------------------------------------------------------------------------------------
-$splice(Includes)
-    //-------------------------------------------------------------------------------------
-    // End Pass Includes
-    //-------------------------------------------------------------------------------------
+    // --------------------------------------------------
+    // Main
+
+    $splice(MainInclude)
 
     ENDHLSL
 }
