--- a/com.unity.render-pipelines.high-definition/Editor/Material/Unlit/ShaderGraph/HDUnlitPass.template
+++ b/com.unity.render-pipelines.high-definition/Editor/Material/Unlit/ShaderGraph/HDUnlitPass.template
@@ -58,6 +58,13 @@ Pass
     int _PassValue;
 
     // --------------------------------------------------
+    // Structs and Packing
+
+    $splice(PassStructs)
+
+    $splice(InterpolatorPack)
+
+    // --------------------------------------------------
     // Graph
 
     // Graph Properties
@@ -72,15 +79,6 @@ Pass
     
     // Graph Pixel
     $splice(GraphPixel)
-
-    // --------------------------------------------------
-    // Structs and Packing
-
-    $buildType(AttributesMesh)
-
-    $buildType(VaryingsMeshToPS)
-
-    $buildType(VaryingsMeshToDS)
 
     // --------------------------------------------------
     // Build Graph Inputs
